--- a/src/IntegrationTests/GesFer.IntegrationTests.csproj
+++ b/src/IntegrationTests/GesFer.IntegrationTests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Api\GesFer.Api.csproj" />
+    <ProjectReference Include="..\Api\GesFer.Admin.Api.csproj" />
     <ProjectReference Include="..\application\GesFer.Application.csproj" />
     <ProjectReference Include="..\Infrastructure\GesFer.Infrastructure.csproj" />
     <ProjectReference Include="..\domain\GesFer.Domain.csproj" />
