feat(scripts): estandar Rust tools y skills - Cargo.toml, push_and_create_pr, Push-And-CreatePR

--- a/scripts/tools-rs/Cargo.toml
+++ b/scripts/tools-rs/Cargo.toml
@@ -18,3 +18,11 @@ anyhow = "1.0"
 [[bin]]
 name = "gesfer_manager"
 path = "src/bin/gesfer_manager.rs"
+
+[[bin]]
+name = "invoke_mysql_seeds"
+path = "src/bin/invoke_mysql_seeds.rs"
+
+[[bin]]
+name = "prepare_full_env"
+path = "src/bin/prepare_full_env.rs"
