--- a/scripts/skills-rs/Cargo.toml
+++ b/scripts/skills-rs/Cargo.toml
@@ -26,3 +26,7 @@ path = "src/bin/invoke_command.rs"
 [[bin]]
 name = "verify_pr_protocol"
 path = "src/bin/verify_pr_protocol.rs"
+
+[[bin]]
+name = "push_and_create_pr"
+path = "src/bin/push_and_create_pr.rs"
